feat: integrate DeepSeek LLM with complete ClickHouse integration
Major Features:
-  DeepSeek LLM Integration: Added DeepSeek as primary LLM provider with Chinese language support
-  ClickHouse Deep Integration: Migrated from H2 to ClickHouse with comprehensive data access layer
-  Dual Storage Architecture: File system + ClickHouse for report persistence
-  Extended REST APIs: Added 8+ new endpoints for data exploration and analysis
-  Chinese Encoding Fix: Resolved UTF-8 encoding issues for Chinese responses
-  Automated Testing: PowerShell scripts for DeepSeek integration verification

Technical Improvements:
- Enhanced PerformanceAnalysisController with ClickHouse data queries
- Implemented ClickHouseRepository for events and performance data access
- Added error trace analysis, slow request detection, service topology mapping
- Optimized time format compatibility between Java LocalDateTime and ClickHouse
- Added LLMConfigTestController for configuration validation
- Created SimpleDeepSeekTestController for hardcoded API testing

New Components:
- DeepSeek configuration in AiAnalysisProperties.java
- LLM health check and fallback mechanisms
- Comprehensive documentation (README.md, integration guides)
- Test scripts for Chinese/English response validation
- Sample performance reports with DeepSeek analysis

Configuration Updates:
- application.yml: DeepSeek config, ClickHouse datasource, UTF-8 encoding
- clickhouse-schema.sql: AI analysis tables structure
- Added deepseek-config-example.yml for setup guidance

Data Access Enhancements:
- ClickHouseRepository: events table queries, performance metrics aggregation
- Support for error traces, slow requests, service topology analysis
- Dynamic table schema discovery for events table
- Optimized SQL queries with result limits and timeouts

Testing & Validation:
- test-deepseek-*.ps1: Automated testing scripts
- show-deepseek-results.ps1: Results visualization
- Multiple sample reports demonstrating DeepSeek analysis 